@@ -1,4 +1,3 @@
-static const char *RcsId = "$Header$";
 //+=============================================================================
 //
 // file :         StarterUtil.cpp
