@@ -1,9 +1,4 @@
 /*----- PROTECTED REGION ID(StarterClass.cpp) ENABLED START -----*/
-static const char *RcsId      = "$Id$";
-static const char *TagName    = "$Name: Starter-Release-6.10 $";
-static const char *CvsPath    = "$Source:  $";
-static const char *SvnPath    = "$HeadURL: https://tango-cs.svn.sourceforge.net/svnroot/tango-cs/classes/cpp/starter $";
-static const char *HttpServer = "http://www.esrf.eu/computing/cs/tango/tango_doc/ds_doc/";
 //=============================================================================
 //
 // file :        StarterClass.cpp
@@ -447,7 +442,7 @@ void StarterClass::get_class_property()
 	cl_prop.push_back(Tango::DbDatum("ServerStartupTimeout"));
 	cl_prop.push_back(Tango::DbDatum("StartServersAtStartup"));
 	cl_prop.push_back(Tango::DbDatum("UseEvents"));
-
+	
 	//	Call database and extract values
 	if (Tango::Util::instance()->_UseDb==true)
 		get_db_class()->get_property(cl_prop);
@@ -827,104 +822,6 @@ void StarterClass::write_class_property()
 	description << str_desc;
 	data.push_back(description);
 
-	//	put cvs or svn location
-	string	filename("Starter");
-	filename += "Class.cpp";
-
-	// check for cvs information
-	string	src_path(CvsPath);
-	start = src_path.find("/");
-	if (start!=string::npos)
-	{
-		end   = src_path.find(filename);
-		if (end>start)
-		{
-			string	strloc = src_path.substr(start, end-start);
-			//	Check if specific repository
-			start = strloc.find("/cvsroot/");
-			if (start!=string::npos && start>0)
-			{
-				string	repository = strloc.substr(0, start);
-				if (repository.find("/segfs/")!=string::npos)
-					strloc = "ESRF:" + strloc.substr(start, strloc.length()-start);
-			}
-			Tango::DbDatum	cvs_loc("cvs_location");
-			cvs_loc << strloc;
-			data.push_back(cvs_loc);
-		}
-	}
-
-	// check for svn information
-	else
-	{
-		string	src_path(SvnPath);
-		start = src_path.find("://");
-		if (start!=string::npos)
-		{
-			end = src_path.find(filename);
-			if (end>start)
-			{
-				header = "$HeadURL: ";
-				start = header.length();
-				string	strloc = src_path.substr(start, (end-start));
-
-				Tango::DbDatum	svn_loc("svn_location");
-				svn_loc << strloc;
-				data.push_back(svn_loc);
-			}
-		}
-	}
-
-	//	Get CVS or SVN revision tag
-
-	// CVS tag
-	string	tagname(TagName);
-	header = "$Name: ";
-	start = header.length();
-	string	endstr(" $");
-
-	end   = tagname.find(endstr);
-	if (end!=string::npos && end>start)
-	{
-		string	strtag = tagname.substr(start, end-start);
-		Tango::DbDatum	cvs_tag("cvs_tag");
-		cvs_tag << strtag;
-		data.push_back(cvs_tag);
-	}
-
-	// SVN tag
-	string	svnpath(SvnPath);
-	header = "$HeadURL: ";
-	start = header.length();
-
-	end   = svnpath.find(endstr);
-	if (end!=string::npos && end>start)
-	{
-		string	strloc = svnpath.substr(start, end-start);
-
-		string tagstr ("/tags/");
-		start = strloc.find(tagstr);
-		if ( start!=string::npos )
-		{
-			start = start + tagstr.length();
-			end   = strloc.find(filename);
-			string	strtag = strloc.substr(start, end-start-1);
-
-			Tango::DbDatum	svn_tag("svn_tag");
-			svn_tag << strtag;
-			data.push_back(svn_tag);
-		}
-	}
-
-	//	Get URL location
-	string	httpServ(HttpServer);
-	if (httpServ.length()>0)
-	{
-		Tango::DbDatum	db_doc_url("doc_url");
-		db_doc_url << httpServ;
-		data.push_back(db_doc_url);
-	}
-
 	//  Put inheritance
 	Tango::DbDatum	inher_datum("InheritedFrom");
 	vector<string> inheritance;
@@ -1018,7 +915,7 @@ void StarterClass::attribute_factory(vector<Tango::Attr *> &att_list)
 	//	min_warning	not set for NotifdState
 	//	delta_t	not set for NotifdState
 	//	delta_val	not set for NotifdState
-
+	
 	notifdstate->set_default_properties(notifdstate_prop);
 	notifdstate->set_polling_period(1000);
 	notifdstate->set_disp_level(Tango::OPERATOR);
@@ -1042,7 +939,7 @@ void StarterClass::attribute_factory(vector<Tango::Attr *> &att_list)
 	//	min_warning	not set for HostState
 	//	delta_t	not set for HostState
 	//	delta_val	not set for HostState
-
+	
 	hoststate->set_default_properties(hoststate_prop);
 	hoststate->set_polling_period(1000);
 	hoststate->set_disp_level(Tango::OPERATOR);
@@ -1066,7 +963,7 @@ void StarterClass::attribute_factory(vector<Tango::Attr *> &att_list)
 	//	min_warning	not set for RunningServers
 	//	delta_t	not set for RunningServers
 	//	delta_val	not set for RunningServers
-
+	
 	runningservers->set_default_properties(runningservers_prop);
 	runningservers->set_polling_period(1000);
 	runningservers->set_disp_level(Tango::OPERATOR);
@@ -1076,7 +973,7 @@ void StarterClass::attribute_factory(vector<Tango::Attr *> &att_list)
 	//	Attribute : StoppedServers
 	StoppedServersAttrib	*stoppedservers = new StoppedServersAttrib();
 	Tango::UserDefaultAttrProp	stoppedservers_prop;
-	stoppedservers_prop.set_description("Return all the Stopped servers.\n");
+	stoppedservers_prop.set_description("Return all the Stopped servers.");
 	stoppedservers_prop.set_label("All Stopped Servers");
 	//	unit	not set for StoppedServers
 	//	standard_unit	not set for StoppedServers
@@ -1090,7 +987,7 @@ void StarterClass::attribute_factory(vector<Tango::Attr *> &att_list)
 	//	min_warning	not set for StoppedServers
 	//	delta_t	not set for StoppedServers
 	//	delta_val	not set for StoppedServers
-
+	
 	stoppedservers->set_default_properties(stoppedservers_prop);
 	stoppedservers->set_polling_period(1000);
 	stoppedservers->set_disp_level(Tango::OPERATOR);
@@ -1114,12 +1011,13 @@ void StarterClass::attribute_factory(vector<Tango::Attr *> &att_list)
 	//	min_warning	not set for Servers
 	//	delta_t	not set for Servers
 	//	delta_val	not set for Servers
-
+	
 	servers->set_default_properties(servers_prop);
 	servers->set_polling_period(1000);
 	servers->set_disp_level(Tango::OPERATOR);
 	//	Not Memorized
 	att_list.push_back(servers);
+
 
 	//	Create a list of static attributes
 	create_static_attribute_list(get_class_attr()->get_attr_list());
@@ -1128,6 +1026,26 @@ void StarterClass::attribute_factory(vector<Tango::Attr *> &att_list)
 	//	Add your own code
 
 	/*----- PROTECTED REGION END -----*/	//	StarterClass::attribute_factory_after
+}
+//--------------------------------------------------------
+/**
+ *	Method      : StarterClass::pipe_factory()
+ *	Description : Create the pipe object(s)
+ *                and store them in the pipe list
+ */
+//--------------------------------------------------------
+void StarterClass::pipe_factory()
+{
+	/*----- PROTECTED REGION ID(StarterClass::pipe_factory_before) ENABLED START -----*/
+	
+	//	Add your own code
+	
+	/*----- PROTECTED REGION END -----*/	//	StarterClass::pipe_factory_before
+	/*----- PROTECTED REGION ID(StarterClass::pipe_factory_after) ENABLED START -----*/
+	
+	//	Add your own code
+	
+	/*----- PROTECTED REGION END -----*/	//	StarterClass::pipe_factory_after
 }
 //--------------------------------------------------------
 /**
@@ -1145,7 +1063,7 @@ void StarterClass::command_factory()
 	//	Set polling perod for command State
 	Tango::Command	&stateCmd = get_cmd_by_name("State");
 	stateCmd.set_polling_period(1000);
-
+	
 
 	//	Command DevStart
 	DevStartClass	*pDevStartCmd =
@@ -1329,7 +1247,7 @@ void StarterClass::erase_dynamic_attributes(const Tango::DevVarStringArray *devl
 Tango::Attr *StarterClass::get_attr_object_by_name(vector<Tango::Attr *> &att_list, string attname)
 {
 	vector<Tango::Attr *>::iterator it;
-	for (it=att_list.begin() ; it<att_list.end() ; it++)
+	for (it=att_list.begin() ; it<att_list.end() ; ++it)
 		if ((*it)->get_name()==attname)
 			return (*it);
 	//	Attr does not exist
